Fix weird gap in campaign for small laptops

--- a/templates/InvitationPage/Congratulations/Congratulations.module.sass
+++ b/templates/InvitationPage/Congratulations/Congratulations.module.sass
@@ -98,10 +98,6 @@
     position: relative
     width: 612px
     font-size: 0
-    +d
-        left: calc(50% - 80px)
-    +t
-        display: none
 
 // Posts
 .listCard
