--- a/templates/InvitationPage/Intro/Intro.module.sass
+++ b/templates/InvitationPage/Intro/Intro.module.sass
@@ -5,19 +5,11 @@
     padding: 70px 0
     margin-top: 180px
     margin-bottom: 100px
-    +w
-        padding-top: 296px
-    +m
-        padding-top: 130px
 
 .section2
     margin: 0
     position: relative
     padding-top: 0
-    +w
-        padding-top: 296px
-    +m
-        padding-top: 130px
 
 .container
     +w
@@ -113,11 +105,11 @@
         top: -30%
         right: calc(50% - 605px)
     +w
-        top: -43.9%
-        right: calc(50% - 1375px)
+        top: -36.9%
+        right: calc(50% - 605px)
     +d
-        top: -43.8%
-        right: calc(50% - 1365px)
+        top: -35.8%
+        right: calc(50% - 555px)
     +t
         top: -23%
         right: -665px
